Devel::Cover history

{{$NEXT}}
 - Fix cover -test on Windows (Christian Walde) (github 24).

Release 0.89 - 15th June 2012
 - Fix POD syntax error (gregor herrmann <gregoa@debian.org>) (rt 77599).
 - Handle RE metachars in build directory (rt 75633 & 77598)
     (dcoupal@cisco.com & Niko Tyni <ntyni@debian.org>).
 - Return to starting directory after cover report (John Lightsey) (rt 61515).
 - Relax permissions on DB directories (github 22).

Release 0.88 - 8th June 2012
 - Add -launch option to open report in appropriate viewer (Stephen Thirlwall).
 - Move ignored filename list into DB module (rt 77163 and github 12).
 - Don't complain about Mouse accessors (rt 71680).
 - Turn off $^W when calling B::Deparse (fixes perl #113464).
 - Update cpancover.

Release 0.87 - 21st May 2012
 - Major documentation overhaul (Pau Amma).
 - Cleanup Data::Dumper usage (localise settings) (Olivier Mengué) (rt 76531).
 - Ignore more generated filenames - Moose and Template Toolkit.
 - Improve results for chained logical operators.
 - Officially support 5.16.0.

Release 0.86 - 9th April 2012
 - Add all coverage criteria to the Vim report.

Release 0.85 - 1st April 2012
 - Add customisable thresholds to HTML reports (Xavier Caron).
 - Improve Vim report.

Release 0.84 - 31th March 2012
 - Add Vim report (based on discussion with Tatsuhiko Miyagawa).

Release 0.83 - 30th March 2012
 - Prefer JSON::XS for faster operation (Audrey Tang (唐鳳)).
 - Rework testing framework (Xavier Caron).

Release 0.82 - 19th March 2012
 - Do not distribute MYMETA.json (Olivier Mengué) (rt 75883).

Release 0.81 - 18th March 2012
 - Fix up dzil release process.

Release 0.80 - 18th March 2012
 - Don't be so noisy with Moose code.
 - Move to Dist:Zilla (Christian Walde).
 - Test against 5.14.2 and 5.15.2 - 5.15.8.
 - Select gcov2perl from the same directory as cover.
 - Print warnings to STDERR so $SIG{__WARN__} isn't called (Christian Walde).