@@ -2,6 +2,7 @@ Devel::Cover history
 
 {{$NEXT}}
  - Fix cover -test on Windows (Christian Walde) (github 24).
+ - Better document coverage options (github 23).
 
 Release 0.89 - 15th June 2012
  - Fix POD syntax error (gregor herrmann <gregoa@debian.org>) (rt 77599).
